# ct-mini-project

./: .gitignore  README.md  requirements.txt
src/.ipynb_checkpoints/: main-checkpoint.py
src/backend/: config.py  db.py  main.py  predict.py  pyproject.toml  railway.json
src/backend/backend/: main.py
src/backend/models/: trained_model.sav
src/datasets/: dataset_final.csv  startup_funding_1.csv  startup_funding_pre_cleaned.csv
src/frontend/: app.js  index.html  package-lock.json  package.json  script.ts  tailwind.config.cjs
src/frontend/src/: App.jsx  index.css
src/frontend/src/components/: ComboBox.jsx  DataGrid.jsx  Prediction.jsx  Queries.jsx  Tab.jsx  Wrapper.jsx
src/notebooks/: datasets.ipynb  learning.ipynb  model.sav  playground.ipynb
src/notebooks/.ipynb_checkpoints/: datasets-checkpoint.ipynb
