[tool.poetry]
name = "api"
version = "0.1.0"
description = "backend for the ct mini project"
authors = ["Shiyaam <63956643+shiyaamsunder@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.2.1"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
motor = "^3.1.1"
pymongo = "^4.3.3"
python-dotenv = "^0.21.1"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
